<package>
  <name>gazebo_ros_control_select_joints</name>
  <version>2.5.7</version>
  <description>gazebo_ros_contrl_select_joints</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/gazebo_ros_control_select_joints</url>

  <author>Jonathan Bohren</author>
  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>angles</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <!--
    Need to use libgazebo5-dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  -->
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>angles</run_depend>

  <export>
    <!--<gazebo_ros_control plugin="${prefix}/robot_hw_sim_plugins.xml"/>-->
  </export>
</package>
